<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="io.github.maximgorbatyuk.taskmanager.EditActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewEditDescribe"
        android:text="@string/edit_activity_create_desc"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTaskTitle"

        android:hint="@string/edit_title_hint"
        android:layout_below="@+id/textViewEditDescribe"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTaskBody"

        android:hint="@string/edit_body_hint"
        android:layout_below="@+id/editTaskTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:maxLines="3"
        android:inputType="textMultiLine"
        android:lines="3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:hint="@string/edit_deadline_hint"
        android:id="@+id/textViewDeadline"

        android:textSize="18sp"
        android:gravity="center"
        android:onClick="showDeadlineDialog"
        android:layout_below="@+id/editTaskBody"
        android:layout_centerHorizontal="true"
        android:textColor="@color/textMain"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:padding="15dp"

        />

    <!--Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_pick_datetime"
        android:id="@+id/buttonDateTime"
        android:layout_below="@+id/editTaskBody"
        android:layout_toRightOf="@+id/textViewDeadline"
        android:layout_toEndOf="@+id/textViewDeadline"
        android:onClick="showDeadlineDialog"/-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_task"
        android:id="@+id/editUpdateInsert"
        android:layout_below="@+id/editCreatedAt"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_remove_task"
        android:id="@+id/buttonRemove"
        android:layout_below="@+id/editUpdateInsert"
        android:layout_centerHorizontal="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_is_done_hint"
        android:id="@+id/switch1"

        android:layout_below="@+id/textViewDeadline"
        android:layout_alignLeft="@+id/editTaskBody"
        android:layout_alignStart="@+id/editTaskBody"
        android:layout_alignRight="@+id/editTaskBody"
        android:layout_alignEnd="@+id/editTaskBody"
        android:padding="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editCreatedAt"
        android:text="Created at"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/switch1"
        android:layout_alignStart="@+id/switch1"
        android:layout_alignRight="@+id/switch1"
        android:layout_alignEnd="@+id/switch1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editID"
        android:text="ID task"
        android:visibility="visible"
        android:layout_alignTop="@+id/textViewEditDescribe"
        android:layout_alignRight="@+id/textViewEditDescribe"
        android:layout_alignEnd="@+id/textViewEditDescribe" />




</RelativeLayout>